objects/LLC_BI__Product_Line__c.object
<CustomObject>
    <description>The Product Line Object stores information about the product line that is associated to the product types in nCino</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CSiDP__lookupKey__c</fullName>
        <description>This optional text field is manually filled out in conjunction with information from CSi for their specific implementation. This field stores the lookup key that corresponds to a product line definition within CSi&apos;s Simplicity tool.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field stores the lookup key that corresponds to a product line definition within CSi&apos;s Simplicity tool.</inlineHelpText>
        <label>CSi Lookup Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>This field is optional, but required for deposit product types. It is manually populated. This field is used to specify the type of accounts this product line relates to.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Residential Mortgage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Accrual_Method__c</fullName>
        <description>This field is manually selected. This field sets the interest accrual methodology for determining the amount of interest owed per period. It is used for Rate &amp; Payment streams. This field defaults to 30_360.</description>
        <label>Interest Accrual Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30_360</fullName>
                    <default>true</default>
                    <label>30_360</label>
                </value>
                <value>
                    <fullName>Actual_360</fullName>
                </value>
                <value>
                    <fullName>Actual_365</fullName>
                </value>
                <value>
                    <fullName>Actual_Actual</fullName>
                </value>
                <value>
                    <fullName>310</fullName>
                </value>
                <value>
                    <fullName>320</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Non_Global_Product_Type_Count__c</fullName>
        <description>This field is calculated via a roll-up. This field is the number of non-Global Product Types with at least one product that relate to the Product Line.</description>
        <inlineHelpText>The number of non-Global Product Types with at least 1 Product that relate to the Product Line.</inlineHelpText>
        <label>Non-Global Product Type Count</label>
        <summaryFilterItems>
            <field>LLC_BI__Product_Type__c.LLC_BI__Usage_Type__c</field>
            <operation>notContain</operation>
            <value>Global</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LLC_BI__Product_Type__c.LLC_BI__Product_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Product_Type__c.LLC_BI__Product_Line__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Object__c</fullName>
        <description>This field is manually set. This is for internal purpses, allowing our system to easily identify the object a product is related to on conversions, merges, etc. This is especially helpful with our dynamic apex and soql.</description>
        <inlineHelpText>Select the Object that this product relates to.</inlineHelpText>
        <label>Product Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LLC_BI__Loan__c</fullName>
                    <default>true</default>
                    <label>LLC_BI__Loan__c</label>
                </value>
                <value>
                    <fullName>LLC_BI__Deposit__c</fullName>
                </value>
                <value>
                    <fullName>Deposit__c</fullName>
                </value>
                <value>
                    <fullName>Loan__c</fullName>
                </value>
                <value>
                    <fullName>Treasury_Service__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. When importing data into nCino, the field can also be used to efficiently associate related records without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Line</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>